--- a/app/views/partials/base.html
+++ b/app/views/partials/base.html
@@ -190,7 +190,7 @@
 	</script>
 
 	<script type="text/template" id="template-carrouselItem">
-		<a href='/user/<%=User.username%>/work/<%=nameSlugify%>'>
+		<a href='/user/<%=User.username%>/<%=entity%>/<%=nameSlugify%>'>
 			<div class="am-MoreImages" style="background-image: url(<%=addFilter(photo, 'w_230,h_230,c_fill')%>);"></div>
 		</a>
 	</script>
