--- a/app/views/user/work/index.html
+++ b/app/views/user/work/index.html
@@ -1,14 +1,14 @@
 {% extends '../../partials/base.html' %}
 {% block elements %}
-{% set work = work.toJSON() %}
+{% set element = element.toJSON() %}
 	<div class="grid-container u-margin-top-30">
 		<div class="grid-100">
 			<div class="single-info">
 				<div class="single-image">
 					<div class="single-image-inner">
-						<img src="{{work.photo|addFilter('w_700,h_800,q_80,c_limit')}}">
+						<img src="{{element.photo|addFilter('w_700,h_800,q_80,c_limit')}}">
 						<div class="actions u-padding-top-20 u-padding-bottom-20">
-							<div class="action {% if work.liked %} active {% endif %}">
+							<div class="action {% if element.liked %} active {% endif %}">
 								<div class="like-btn">
 									<i class="icon bi_ecommerce-diamon  valuation"></i>
 									<p class="text">VALORAR</p>
@@ -59,16 +59,18 @@
 				<div class="single-data u-padding-bottom-40">
 					<div class="FollowArtist u-padding-bottom-10">
 						<div>
-							<p class="u-padding-bottom-7 big uppercase"><strong>{{work.User.firstname}}</strong></p>
+							<p class="u-padding-bottom-7 big uppercase"><strong>{{element.User.firstname}}</strong></p>
 							{% if !owner %}
 							<button class="am-Follow-button">+ SEGUIR</button>
 							{% endif %}
 						</div>
 					</div>
 					<div class="u-separator"></div>
-					<p class="am-Single-title-text u-margin-top-15">{{work.description}}</p>
+					<p class="am-Single-title-text u-margin-top-15">{{element.description}}</p>
 					<p class="am-Single-text u-margin-top-20">Categoría:</p>
-					{% for category in work.Categories %}
+
+					{% if entity === 'work' %}
+					{% for category in element.Categories %}
 						<a href='/works/category/{{category.nameSlugify}}/page-1/?order=popularity'><span class="am-Category-box u-margin-top-7">{{category.name}}</span></a>
 					{% endfor %}
 					<div class="info-box u-margin-top-25">
@@ -81,6 +83,36 @@
 							<p class="msg u-padding-top-15 u-padding-bottom-4">Muy pronto la tienda en línea</p>
 						</div>
 					</div>
+					{% else %}
+					<a href='/products/type/{{element.ProductType.nameSlugify}}/page-1/?order=popularity'><span class="am-Category-box u-margin-top-7">{{element.ProductType.name}}</span></a>
+					<div class="info-box u-margin-top-25">
+						<div class="header">
+							<p class="selected">PRODUCTOS</p>
+						</div>
+						<div class="body">
+							<p class="text u-margin-top-10">Precio por unidad:</p>
+							<p class="price u-text-center">S/.<strong>{{element.price}}</strong> PEN</p>
+
+							<p class="text u-margin-top-10">Cantidad:</p>
+							<div class="u-center">
+								<div class="u-margin-top-7">
+									<span class="text">X</span>
+									<select>
+										<option>1</option>
+										<option>2</option>
+										<option>3</option>
+										<option>4</option>
+									</select>
+									<span class="text">&nbsp;&nbsp;Unidades</span>
+								</div>
+							</div>
+							<div class="u-center">
+								<button class="am-View-button expand u-margin-top-20 buy">COMPRAR</button>
+							</div>
+						</div>
+					</div>
+					{% endif %}
+
 					<p class="am-stats-text u-margin-top-40">ESTADÍSTICAS</p>
 					<div class="u-separator"></div>
 					<div class="u-center">
@@ -89,13 +121,13 @@
 						    <!-- <td><i class="fa fa-eye"></i></td> -->
 						    <td><i class="bi_interface-view"></i></td>
 						    <td><p>VISTAS</p></td>
-						    <td><span>{{work.views}}</span></td>
+						    <td><span>{{element.views}}</span></td>
 						  </tr>
 						  <tr>
 						    <!-- <td><i class="fa fa-diamond"></i></td> -->
 						    <td><i class="bi_ecommerce-diamon"></i></td>
 						    <td><p>VALORACIONES</p></td>
-						    <td><span class="likes">{{work.likes || 0}}</span></td>
+						    <td><span class="likes">{{element.likes || 0}}</span></td>
 						  </tr>
 						</table>
 					</div>
@@ -103,17 +135,134 @@
 			</div>
 		</div>
 	</div>
-{% include '../../partials/single-work-product.html' %}
+	<div class="am-SingleMenu u-margin-top-20">
+	  <div class="grid-container">
+	    <div class="grid-100">
+	      <div class="single-menu">
+	        <div class="artist">
+	          <div class="FollowArtist">
+	            <a href="/user/{{element.User.username}}">
+	              <img src="{{element.User.photo}}">
+	            </a>
+	            <div>
+	              <p class="u-padding-bottom-4 uppercase" style="font-weight: bold;">{{element.User.firstname}}</p>
+	              <p class="u-padding-bottom-7"> <strong></strong> {{element.User.city}}, {{element.User.country}}</p>
+	              {% if !owner %}
+	              <button class="am-Follow-button">+ SEGUIR</button>
+	              {% endif %}
+	            </div>
+	          </div>
+	        </div>
+	        <div class="menu">
+	          <div class="carousel">
+	            <div class="single-tabs">
+	              <div class="single-tab index">
+	                <p>+ OBRAS</p>
+	                <!-- <i class="fa fa-cube"></i> -->
+	                <i class="bi_misc-cube"></i>
+	              </div>
+	              <div class="single-tab reviews">
+	                <p>REVIEWS</p>
+	                <span>{{reviews.length}}</span>
+	              </div>
+	              <div class="single-tab tags">
+	                <p>TAGS</p>
+	                <!-- <i class="fa fa-align-left"></i> -->
+	                <i class="bi_editorial-left-align"></i>
+	              </div>
+	            </div>
+	          </div>
+	        </div>
+	      </div>
+	    </div>
+	  </div>
+	</div>
+
+	<div class="grid-container reviews-container {% if currentPath !== 'reviews' %} hide {% endif %}">
+	  <div class="grid-100">
+	    <div class="reviews">
+	      <p class="title">Reviews &nbsp;&nbsp;<span>{{reviews.length}}</span></p>
+	      <div class='reviews-items-container'>
+	      </div>
+	      <div class="review">
+	        {% if user %}
+	          <div class="avatar"><img src="{{user.photo}}"></div>
+	          <form class="content review-form">
+	            <input type="hidden" name='id{{entity|capitalize}}' value="{{element.id}}"/>
+	            <textarea class='value-input' name="value"></textarea>
+	            <button>ADD COMMENT</button>
+	          </form>
+	        {% else %}
+	          <a href="/auth/login">Logeate, para agregar review</a>
+	        {% endif %}
+	      </div>
+	    </div>
+	  </div>
+	</div>
+	  <div class="grid-container tags-container {% if currentPath !== 'tags' %} hide {% endif %}">
+	    <div class="grid-100">
+	      <div class="tags-container">
+	        <p class="title">Tags&nbsp;&nbsp;<span>{{tags.length}}</span></p>
+	        <div class="u-separator"></div>
+	        <div class="tags">
+	          {% for tag in tags %}
+	          {% set url = "#" + tag.name %}
+	          <div class="tag uppercase"><a href='/works/category/all/page-1/?term={{url|url_encode}}'>{{tag.name}}</a></div>
+	          {% endfor %}
+	        </div>
+	      </div>
+	    </div>
+	  </div>
+
+
+	<div class="index-container {% if currentPath !== 'index' %} hide {% endif %}">
+	  <div class="grid-container u-margin-top-60">
+	    <div class="grid-100">
+	      <p class="am-more-text u-text-center u-padding-bottom-10">Otras obras del artista</p>
+	      <div class="u-separator-center"></div>
+	    </div>
+	  </div>
+
+	  <div class="grid-container">
+	    <div class="grid-100">
+	      <div class="more-carousel">
+	        <div class="more-images more">
+	        </div>
+	      </div>
+	    </div>
+	  </div>
+
+	  <div class="u-separator u-margin-top-60"></div>
+
+	  <div class="grid-container u-margin-top-60">
+	    <div class="grid-100">
+	      <p class="am-more-text u-text-center u-padding-bottom-10">Obras relacionadas</p>
+	      <div class="u-separator-center"></div>
+	    </div>
+	  </div>
+
+	  <div class="grid-container">
+	    <div class="grid-100">
+	      <div class="more-carousel">
+	        <div class="more-images similar">
+	        </div>
+	      </div>
+	    </div>
+	  </div>
+	</div>
 {% include '../../partials/report.html' %}
 {% endblock %}
 {% block scripts %}
 	<script>
 		var owner = {{owner|json|safe}};
-		var work = {{work|json|safe}};
+		var entity = {{entity|json|safe}};
+		var element = {{element|json|safe}};
 		var currentPath = {{currentPath|json|safe}};
 		var reviews = {{reviews|json|safe}};
 		var more = {{more|json|safe}};
 		var similar = {{similar|json|safe}};
+		console.log(more);
+		console.log(similar);
 	</script>
 	<script src='/work-product.js'></script>
 {% endblock %}
