add img  tab in user cover

--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -812,6 +812,10 @@ body
 	background-size cover
 	background-position center center
 	position relative
+	overflow hidden
+	.am-Profile-banner-img
+		position absolute
+		top 0
 	i
 		position absolute
 		bottom 20px
