--- a/app/views/user/index.html
+++ b/app/views/user/index.html
@@ -3,6 +3,9 @@
 {% set path = 'market' %}
 {% set profile = profile.toJSON()%}
 {% block elements %}
+	<!-- <div class="am-Profile-banner" style="background-image: url('http://www.wallpapereast.com/static/images/Dragon-Backgrounds-Wallpaper-Hd-44.jpg')"> -->
+	<div class="am-Profile-banner">
+		<img class="am-Profile-banner-img" src="http://www.wallpapereast.com/static/images/Dragon-Backgrounds-Wallpaper-Hd-44.jpg">
 		{% if owner %}
 			<div class="uploader-cover">
 				<i class="fa fa-pencil-square-o"></i>
