--- a/app/views/partials/base.html
+++ b/app/views/partials/base.html
@@ -158,7 +158,7 @@
 		  			<p><%= User.firstname %></p>
 		  		</div>
 		  		<div class="product-card-stats">
-		  			<p><%= price %></p>
+		  			<p><%= finalPrice %></p>
 		  			<p><%= likes %> &nbsp;&nbsp;&nbsp;<i class="bi_ecommerce-diamon"></i></p>
 		  		</div>
 		  	</div>
