--- a/app/views/user/work/sell.html
+++ b/app/views/user/work/sell.html
@@ -56,7 +56,7 @@
     		<div class="operators">
     			<div class="box">
     				<div class="input container">
-              <input required type='number' name='price' placeholder="cuanto deseas ganar"></input>
+              <input required type='number' name='price' value='{{product.price}}'   placeholder="cuanto deseas ganar"></input>
     				</div>
     			</div>
     			<div class="simbol">+</div>
@@ -123,8 +123,10 @@ $(function(){
   var $price = $('input[name=price]');
   var $final_price = $('input[name=finalPrice]');
 
-  var price;
-  var final_price;
+  var product= {{product|json|safe}};
+  var price = product.price;
+  var final_price = product.finalPrice;
+
   $price.keyup(function(){
     price = parseInt($(this).val(), 10);
     if(isNaN(price))
@@ -141,7 +143,8 @@ $(function(){
 			photo              : work.photo,
 			name             : work.name,
 			description             : $('textarea[name=description]').val(),
-      price: final_price,
+      price: price,
+      finalPrice: final_price,
       public: true,
       idWork: work.id,
       category: parseInt($('select[name=categories]').val(),10),
@@ -169,6 +172,9 @@ $(function(){
     $price.keyup();
   });
   $('.select-type').change();
+  
+  $('.select-type').find('option[value='+ {{productType|json|safe}}.id+']').attr("selected",true);
+
 });
 </script>
 {% endblock %}
