--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -815,18 +815,31 @@ body
 	overflow hidden
 	.am-Profile-banner-img
 		position absolute
-		top 0
-	i
+		top 50%
+		transform translate(0, -50%)
+		z-index: -1;
+	.edit
 		position absolute
 		bottom 20px
 		right 20px
 		color white
 		font-size 1.5rem
 		cursor pointer
-		display none
-	&:hover
+	.edit-options
+		position absolute
+		bottom 20px
+		right 20px
+		color white
+		font-size 1.5rem
 		i
-			display block
+			cursor pointer
+			margin-left 10px
+			// padding 5px
+		// cursor pointer
+	// 	display none
+	// &:hover
+	// 	i
+	// 		display block
 
 .am-Profile-avatar
 	display flex
