--- a/app/views/partials/base.html
+++ b/app/views/partials/base.html
@@ -174,6 +174,9 @@
 						<p><%=name%></p>
 					</div>
 					<div class="collection-card-images">
+						<div class="collection-card-image empty"></div>
+						<div class="collection-card-image empty"></div>
+						<div class="collection-card-image empty"></div>
 						<% _.each(works, function(work) { %>
 							<div class="collection-card-image" style="background-image: url('<%= addFilter(work.photo, 'w_300,h_300,c_fill') %>')"></div>
 						<% }); %>
