add placeholder images in artist card

--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -316,6 +316,7 @@ body
 		height 110px
 		background-size cover
 		background-position center center
+		background #ddd
 	&-follow
 		padding 12px
 		button
