--- a/app/views/partials/base.html
+++ b/app/views/partials/base.html
@@ -133,8 +133,12 @@
 		  		</div>
 				</a>
 	  		<div class="artist-card-works">
-					<% _.each(Works, function(work) { %>
-						<div class="artist-card-work" style="background-image: url('<%= addFilter(work.photo, 'w_120,h_120,c_fill') %>')"></div>
+					<% _.each([0,1,2,3], function(i) { %>
+			  		<% if(Works[i] && Works[i].photo) { %>
+							<div class="artist-card-work" style="background-image: url('<%= addFilter(Works[i].photo, 'w_120,h_120,c_fill') %>')"></div>
+			  		<% } else { %>
+		  				<div class="artist-card-work"></div>
+			  		<% } %>
 					<% }); %>
 	  		</div>
 	  		<div class="artist-card-follow">
